Changed content SUPER

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container-4 left-margin">
       <div>
         <h1>MY STUFF</h1>
-        <p>some special powers...</p>
+        <p>some super powers...</p>
       </div>
       <div class="top-margin"><strong>Calisthenics</strong><br><img src="images/barras.jpg" alt="calisthenics" class="img-resize borders"></td>
           <br></div>
