--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="top-margin"><strong>Calisthenics</strong><br><img src="images/barras.jpg" alt="calisthenics" class="img-resize borders"></td>
           <br></div>
-      <div class="top-margin"><strong>Forro</strong><br><img src="images/assum_preto.jpg" alt="forro" class="img-resize borders"></td>
+      <div class="top-margin"><strong>Forró</strong><br><img src="images/assum_preto.jpg" alt="forro" class="img-resize borders"></td>
           <br></div>
       <div class="top-margin"><strong>Origami</strong><br><img src="images/tsuru.jpg" alt="origami" class="img-resize borders"></div>
     </div>
