added playlist, rocky quote and header

--- a/index.html
+++ b/index.html
@@ -3,40 +3,60 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>Basic infos</title>
   </head>
   <body>
-    <div class="container-2-simple">
-    <div>
-      <div class="main-cards left-margin">
-        <img src="images/profile.jpg" alt="profile-image" class="img-resize" id="profile-round">
-        <h1>Mauricio Hamaji Homma</h1>
-        <h2>Trained professional... don't try this at home</h2>
-        <p>Team Pizza! Prefer dogs over cats over humans. Deep love for useless stuff!</p>
-      </div>
+    <div class="main-cards" id="topbar">
+      <h1><i class="fas fa-dragon"></i></h1>
     </div>
-    <div class="left-margin">
-      <div class="container-4 left-margin">
-        <h1 class="left-margin">#callmemaybe</h1>
-        <div><a href="https://www.facebook.com/mauricio.homma.9" target="_blank"><i class="fab fa-facebook-f font-size top-margin"></i></a></div>
-        <div><a href="https://br.linkedin.com/in/mauricio-homma-6181a0a8" target="_blank"><i class="fab fa-linkedin-in font-size top-margin"></i></a></div>
-        <div><a href="https://www.instagram.com/mhhomma/" target="_blank"><i class="fab fa-instagram font-size top-margin"></i></a></div>
+    <div id="page-content">
+      <div class="container-2-simple">
+        <div>
+          <div class="main-cards left-margin padding-bottom">
+            <img src="images/profile.jpg" alt="profile-image" class="img-resize" id="profile-round">
+            <h1>Mauricio Hamaji Homma</h1>
+          </div>
+          <div class="main-cards left-margin">
+            <h2><i class="fas fa-skull-crossbones"></i><br>Trained professional... don't try this at home</h2>
+            <p>Team Pizza! Prefer dogs over cats over humans. Deep love for useless stuff!</p>
+          </div>
+        </div>
+      <div class="main-cards left-margin fit-text">
+        <p>“Life's not about how hard of a hit you can give... it's about how many you can take, and still keep moving forward.” <br>― Sylvester Stallone, Rocky Balboa</p>
       </div>
-    </div>
+      <div>
+        <div class="main-cards left-margin bottom-margin padding-bottom">
+          <h1>#callmemaybe</h1>
+          <div class="container-3-simple">
+            <div><a href="https://www.facebook.com/mauricio.homma.9" target="_blank"><i class="fab fa-facebook-f font-size top-margin"></i></a>
+            </div>
+            <div><a href="https://br.linkedin.com/in/mauricio-homma-6181a0a8" target="_blank"><i class="fab fa-linkedin-in font-size top-margin"></i></a>
+            </div>
+            <div><a href="https://www.instagram.com/mhhomma/" target="_blank"><i class="fab fa-instagram font-size top-margin"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="main-cards left-margin padding-bottom">
+            <h1>-<i class="fas fa-headphones"></i>-</h1>
+            <iframe src="https://open.spotify.com/embed/user/mauhamaji/playlist/45qAFt95xZ2cg7Q0LUaKg0" width="300" height="270" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </div>
+      </div>
     </div>
 
-    <div class="container-4 left-margin">
-      <div>
-        <h1>MY STUFF</h1>
-        <p>some super powers...</p>
+      <div class="main-cards container-4 left-margin-stuff">
+        <div>
+          <h1>MY STUFF</h1>
+          <p>some super powers...</p>
+        </div>
+        <div class="top-margin scale-oneforth"><strong>Calisthenics</strong><br><img src="images/barras.jpg"alt="calisthenics" class="img-resize borders"></td><br>
+        </div>
+        <div class="top-margin scale-oneforth"><strong>Forró</strong><br><img src="images/assum_preto.jpg" alt="forro" class="img-resize borders"></td><br>
+        </div>
+        <div class="top-margin scale-oneforth"><strong>Origami</strong><br><img src="images/tsuru.jpg" alt="origami" class="img-resize borders">
+        </div>
       </div>
-      <div class="top-margin"><strong>Calisthenics</strong><br><img src="images/barras.jpg" alt="calisthenics" class="img-resize borders"></td>
-          <br></div>
-      <div class="top-margin"><strong>Forró</strong><br><img src="images/assum_preto.jpg" alt="forro" class="img-resize borders"></td>
-          <br></div>
-      <div class="top-margin"><strong>Origami</strong><br><img src="images/tsuru.jpg" alt="origami" class="img-resize borders"></div>
     </div>
   </body>
 </html>
